--- a/izberi.html
+++ b/izberi.html
@@ -66,7 +66,7 @@
              animation-timing-function: linear;
              height: 30px;
              width: 30px;
-             border: 8px solid black;
+             border: 8px solid white;
              border-right-color: transparent;
              border-radius: 50%;
              display: inline-block;
@@ -84,7 +84,7 @@
     </head>
     <body>
         <div style="font-size: 1.2rem">
-            Katero število med 1 in 1000 imaš v mislih?
+            Izberi trejler (1 do 1000):
             <input id="stevilo" type="text" style="font-size: 1.2rem;background:black;color:white;border-radius:2px;" />
             <button id="gumb" style="font-size: 1.2rem;color:white;background:black;border:1px solid white;border-radius:2px;">klik</button>
         </div>
@@ -93,7 +93,7 @@
             <video style="width: 100%; margin-top: .5rem;" id="televizija" controls>
                 Žal gostujoč kos tehnike ni adekvaten.
             </video>
-            <div class="loading-spinner" style="display: none" id="loader"></div>
+            <div class="loading-spinner" style="display: none;" id="loader"></div>
         </div>
 
         <script type="text/javascript">
@@ -103,6 +103,8 @@
          var loader = document.getElementById("loader");
          var st = 0;
 
+         var loading = null;
+
          function pridobiPosnetek() {
             var xhttp = new XMLHttpRequest();
             xhttp.open("GET", "/nepovednik/nepoved/" + st, true);
@@ -111,15 +113,12 @@
                     var resp = this.responseText;
 
                     if (resp === "zacetek" || resp === "cakaj") {
-                        setTimeout(pridobiPosnetek, 3000);
+                        loading = setTimeout(pridobiPosnetek, 3000);
                     } else {
                         loader.style.display = "none";
-                        //var src = document.createElement("source");
-                        //src.src = resp;
-                        //src.type = "video/webm";
-                        //tv.appendChild(src);
                         tv.src = '/nepovednik' + resp;
                         tv.play();
+                        loading = null;
                     }
                 }
             };
@@ -134,22 +133,27 @@
              if (isNaN(st) || st < 0 || st > 1000) {
                  stel.style.backgroundColor = "darksalmon";
              } else {
+                 if (loading) return;
                  stel.style.backgroundColor = "transparent";
                  loader.style.display = "block";
                  tv.pause();
-                 tv.src = null;
                  pridobiPosnetek();
             }
          }
 
          function klik(e) {
-           console.log("kliK!");
            if (e.keyCode == 13) {
              proziPosnetek();
            }
          }
 
          stel.onkeypress = klik;
+
+         // Prvi posnetek je random
+         var initNum = Math.ceil(Math.random() * 1000);
+         st = initNum;
+         stel.value = initNum;
+         pridobiPosnetek();
 
         </script>
     </body>
